force-app/main/default/objects/Site_Custom_Settings__c/Site_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Site Custom Settings</label>
</CustomObject>