force-app/main/default/objects/Site_Custom_Settings__c/fields/Air_HBL_No_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Air_HBL_No_Prefix__c</fullName>
    <label>Air HBL No Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>