force-app/main/default/objects/Site_Custom_Settings__c/fields/AS_AGENT_FOR_CARRIER_2__c.field-meta.xml
<CustomField>
    <fullName>AS_AGENT_FOR_CARRIER_2__c</fullName>
    <label>AS AGENT FOR CARRIER 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>