force-app/main/default/objects/Site_Custom_Settings__c/fields/BankBalanceObjectIDPrefix__c.field-meta.xml
<CustomField>
    <fullName>BankBalanceObjectIDPrefix__c</fullName>
    <label>Bank Balance Object ID Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>