force-app/main/default/objects/Site_Custom_Settings__c/fields/BL_Issued_Location__c.field-meta.xml
<CustomField>
    <fullName>BL_Issued_Location__c</fullName>
    <label>B/L Issued Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>