force-app/main/default/objects/Site_Custom_Settings__c/fields/CashObjectIdPrefix__c.field-meta.xml
<CustomField>
    <fullName>CashObjectIdPrefix__c</fullName>
    <description>The prefix of Cash object ID</description>
    <inlineHelpText>The prefix of Cash object ID</inlineHelpText>
    <label>Cash Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>