force-app/main/default/objects/Site_Custom_Settings__c/fields/CloWMSExchangeRateViewName__c.field-meta.xml
<CustomField>
    <fullName>CloWMSExchangeRateViewName__c</fullName>
    <label>CloWMS Exchange Rate View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>