force-app/main/default/objects/Site_Custom_Settings__c/fields/CloWMSPayableViewName__c.field-meta.xml
<CustomField>
    <fullName>CloWMSPayableViewName__c</fullName>
    <label>CloWMS Payable View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>