force-app/main/default/objects/Site_Custom_Settings__c/fields/CloWMSReceivableViewName__c.field-meta.xml
<CustomField>
    <fullName>CloWMSReceivableViewName__c</fullName>
    <label>CloWMS Receivable View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>