force-app/main/default/objects/Site_Custom_Settings__c/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <defaultValue>&quot;Address&quot;</defaultValue>
    <description>use to contain company address information</description>
    <label>Company Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>