force-app/main/default/objects/Site_Custom_Settings__c/fields/Company_Fax__c.field-meta.xml
<CustomField>
    <fullName>Company_Fax__c</fullName>
    <defaultValue>&quot;Fax&quot;</defaultValue>
    <description>use to contain company fax number</description>
    <label>Company Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>