force-app/main/default/objects/Site_Custom_Settings__c/fields/Company_Signature__c.field-meta.xml
<CustomField>
    <fullName>Company_Signature__c</fullName>
    <label>Company Signature</label>
    <type>TextArea</type>
</CustomField>