force-app/main/default/objects/Site_Custom_Settings__c/fields/Container_Vessel_SLA__c.field-meta.xml
<CustomField>
    <fullName>Container_Vessel_SLA__c</fullName>
    <defaultValue>240</defaultValue>
    <description>ETA Monday Ferry is the ferry arrives on Monday</description>
    <inlineHelpText>ETA Monday Ferry is the ferry arrives on Monday</inlineHelpText>
    <label>Container Vessel and ETA Monday Ferry SL</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>