force-app/main/default/objects/Site_Custom_Settings__c/fields/CorporateNumber__c.field-meta.xml
<CustomField>
    <fullName>CorporateNumber__c</fullName>
    <label>Corporate Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>