force-app/main/default/objects/Site_Custom_Settings__c/fields/DebitStartNumber__c.field-meta.xml
<CustomField>
    <fullName>DebitStartNumber__c</fullName>
    <label>Debit Start Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>