force-app/main/default/objects/Site_Custom_Settings__c/fields/EnableInvoiceTemplateSet10__c.field-meta.xml
<CustomField>
    <fullName>EnableInvoiceTemplateSet10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Invoice Template Set 10</label>
    <type>Checkbox</type>
</CustomField>