force-app/main/default/objects/Site_Custom_Settings__c/fields/EnableInvoiceTemplateSet11__c.field-meta.xml
<CustomField>
    <fullName>EnableInvoiceTemplateSet11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Invoice Template Set 11</label>
    <type>Checkbox</type>
</CustomField>