force-app/main/default/objects/Site_Custom_Settings__c/fields/EnglishCompanyAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>EnglishCompanyAddressLine1__c</fullName>
    <label>English Company Address (Line 1)</label>
    <type>TextArea</type>
</CustomField>