force-app/main/default/objects/Site_Custom_Settings__c/fields/EnglishCompanyAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>EnglishCompanyAddressLine2__c</fullName>
    <label>English Company Address (Line 2)</label>
    <type>TextArea</type>
</CustomField>