force-app/main/default/objects/Site_Custom_Settings__c/fields/ExchangeRateViewName__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateViewName__c</fullName>
    <label>CloFMS/TMS Exchange Rate View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>