force-app/main/default/objects/Site_Custom_Settings__c/fields/ExpensePayableViewName__c.field-meta.xml
<CustomField>
    <fullName>ExpensePayableViewName__c</fullName>
    <label>Expense Payable View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>