force-app/main/default/objects/Site_Custom_Settings__c/fields/FCY_Currency__c.field-meta.xml
<CustomField>
    <fullName>FCY_Currency__c</fullName>
    <label>FCY Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>