force-app/main/default/objects/Site_Custom_Settings__c/fields/FCYBankAccountShortName2__c.field-meta.xml
<CustomField>
    <fullName>FCYBankAccountShortName2__c</fullName>
    <label>FCY Bank Account Short Name-2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>