force-app/main/default/objects/Site_Custom_Settings__c/fields/FCYBankAccountShortName3__c.field-meta.xml
<CustomField>
    <fullName>FCYBankAccountShortName3__c</fullName>
    <label>FCY Bank Account Short Name-3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>