force-app/main/default/objects/Site_Custom_Settings__c/fields/Ferry_SLA__c.field-meta.xml
<CustomField>
    <fullName>Ferry_SLA__c</fullName>
    <defaultValue>120</defaultValue>
    <description>ETA Non-Monday Ferry is the ferry arrives on Wednesday, Friday.</description>
    <inlineHelpText>ETA Non-Monday Ferry is the ferry arrives on Wednesday, Friday.</inlineHelpText>
    <label>Air and ETA Non-Monday Ferry SLA(Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>