force-app/main/default/objects/Site_Custom_Settings__c/fields/Foreign_Account_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Account_Address_3__c</fullName>
    <label>Foreign Account Address 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>