force-app/main/default/objects/Site_Custom_Settings__c/fields/Foreign_Account_No_4__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Account_No_4__c</fullName>
    <label>Foreign Account No 4</label>
    <length>60</length>
    <type>Text</type>
</CustomField>