force-app/main/default/objects/Site_Custom_Settings__c/fields/Foreign_Bank_2_Other__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Bank_2_Other__c</fullName>
    <label>Foreign Bank 2-Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>