force-app/main/default/objects/Site_Custom_Settings__c/fields/Foreign_Bank_Account_4__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Bank_Account_4__c</fullName>
    <label>Foreign Bank Account 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>