force-app/main/default/objects/Site_Custom_Settings__c/fields/Foreign_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Bank_Account__c</fullName>
    <label>Foreign Bank Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>