force-app/main/default/objects/Site_Custom_Settings__c/fields/Foreign_Bank_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Bank_Address_1__c</fullName>
    <label>Foreign Bank Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>