force-app/main/default/objects/Site_Custom_Settings__c/fields/GPSSystem2URL__c.field-meta.xml
<CustomField>
    <fullName>GPSSystem2URL__c</fullName>
    <inlineHelpText>Must not input http://.</inlineHelpText>
    <label>GPS System 2</label>
    <type>Url</type>
</CustomField>