force-app/main/default/objects/Site_Custom_Settings__c/fields/HBLTemplateURLDraft__c.field-meta.xml
<CustomField>
    <fullName>HBLTemplateURLDraft__c</fullName>
    <label>H B/L Template URL (Draft)</label>
    <type>Url</type>
</CustomField>