force-app/main/default/objects/Site_Custom_Settings__c/fields/HBLTemplateURLOriginal__c.field-meta.xml
<CustomField>
    <fullName>HBLTemplateURLOriginal__c</fullName>
    <label>H B/L Template URL (Orignal)</label>
    <type>Url</type>
</CustomField>