force-app/main/default/objects/Site_Custom_Settings__c/fields/HBLTemplateURLWaybill__c.field-meta.xml
<CustomField>
    <fullName>HBLTemplateURLWaybill__c</fullName>
    <label>H B/L Template URL (Waybill)</label>
    <type>Url</type>
</CustomField>