force-app/main/default/objects/Site_Custom_Settings__c/fields/InvoiceTemplateSet11Name__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTemplateSet11Name__c</fullName>
    <label>Invoice Template Set 11 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>