force-app/main/default/objects/Site_Custom_Settings__c/fields/InvoiceTemplateSet12Name__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTemplateSet12Name__c</fullName>
    <label>Invoice Template Set 12 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>