force-app/main/default/objects/Site_Custom_Settings__c/fields/Local_Bank_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Local_Bank_Account_1__c</fullName>
    <label>Local Bank Account 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>