force-app/main/default/objects/Site_Custom_Settings__c/fields/Local_Bank_Account_3__c.field-meta.xml
<CustomField>
    <fullName>Local_Bank_Account_3__c</fullName>
    <label>Local Bank Account 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>