force-app/main/default/objects/Site_Custom_Settings__c/fields/Local_Bank_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Local_Bank_Address_2__c</fullName>
    <label>Local Bank Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>