force-app/main/default/objects/Site_Custom_Settings__c/fields/Local_Bank_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Local_Bank_Name_2__c</fullName>
    <label>Local Bank Name 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>