force-app/main/default/objects/Site_Custom_Settings__c/fields/Local_Company_Address_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Local_Company_Address_ZIP__c</fullName>
    <label>Company Address Local (ZIP/City)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>