force-app/main/default/objects/Site_Custom_Settings__c/fields/Local_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Company_Name__c</fullName>
    <description>Name in local language</description>
    <inlineHelpText>Name in local language</inlineHelpText>
    <label>Local Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>