force-app/main/default/objects/Site_Custom_Settings__c/fields/Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency__c</fullName>
    <label>Local Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>