force-app/main/default/objects/Site_Custom_Settings__c/fields/LocalCompanyAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>LocalCompanyAddressLine2__c</fullName>
    <label>Local Company Address (Line 2)</label>
    <type>TextArea</type>
</CustomField>