force-app/main/default/objects/Site_Custom_Settings__c/fields/LocalCurrencyBankAccountShortName1__c.field-meta.xml
<CustomField>
    <fullName>LocalCurrencyBankAccountShortName1__c</fullName>
    <label>Local Currency Bank Account Short Name-1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>