force-app/main/default/objects/Site_Custom_Settings__c/fields/LogisticAssociationNumber__c.field-meta.xml
<CustomField>
    <fullName>LogisticAssociationNumber__c</fullName>
    <label>Logistic Association Number for B/L</label>
    <length>255</length>
    <type>Text</type>
</CustomField>