force-app/main/default/objects/Site_Custom_Settings__c/fields/NvoccCode__c.field-meta.xml
<CustomField>
    <fullName>NvoccCode__c</fullName>
    <label>NVOCC Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>