force-app/main/default/objects/Site_Custom_Settings__c/fields/Ocean_HBL_No_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Ocean_HBL_No_Prefix__c</fullName>
    <description>This is the prefix to be appended to the auto-generated HBL Number for Ocean Export shipment</description>
    <inlineHelpText>This is the prefix to be appended to the auto-generated HBL Number for Ocean Export shipment</inlineHelpText>
    <label>Ocean HBL No Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>