force-app/main/default/objects/Site_Custom_Settings__c/fields/ReceivableViewName__c.field-meta.xml
<CustomField>
    <fullName>ReceivableViewName__c</fullName>
    <label>CloFMS/TMS Receivable View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>