force-app/main/default/objects/Site_Custom_Settings__c/fields/Registration_No_Form__c.field-meta.xml
<CustomField>
    <fullName>Registration_No_Form__c</fullName>
    <label>Registration No(Form)</label>
    <length>11</length>
    <type>Text</type>
</CustomField>