force-app/main/default/objects/Site_Custom_Settings__c/fields/Registration_No_Serial__c.field-meta.xml
<CustomField>
    <fullName>Registration_No_Serial__c</fullName>
    <label>Registration No(Serial)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>