force-app/main/default/objects/Site_Custom_Settings__c/fields/RouteObjectIdPrefix__c.field-meta.xml
<CustomField>
    <fullName>RouteObjectIdPrefix__c</fullName>
    <label>Route Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>