force-app/main/default/objects/Site_Custom_Settings__c/fields/ShortCompanyName__c.field-meta.xml
<CustomField>
    <fullName>ShortCompanyName__c</fullName>
    <inlineHelpText>Prefix for Job Request ID type 2</inlineHelpText>
    <label>Short Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>