force-app/main/default/objects/Site_Custom_Settings__c/fields/ShowInvoiceDebitNo__c.field-meta.xml
<CustomField>
    <fullName>ShowInvoiceDebitNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Invoice/ Debit No</label>
    <type>Checkbox</type>
</CustomField>