force-app/main/default/objects/Site_Custom_Settings__c/fields/StandardWorkHours__c.field-meta.xml
<CustomField>
    <fullName>StandardWorkHours__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Number of working hour per standard day</description>
    <label>Standard Work Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>