force-app/main/default/objects/Site_Custom_Settings__c/fields/TurnOnAccountingClosingLock__c.field-meta.xml
<CustomField>
    <fullName>TurnOnAccountingClosingLock__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the Accounting Closing Lock function will be activated.</inlineHelpText>
    <label>Turn On Accounting Closing Lock</label>
    <type>Checkbox</type>
</CustomField>