force-app/main/default/objects/Site_Custom_Settings__c/fields/VAT_Background_Image__c.field-meta.xml
<CustomField>
    <fullName>VAT_Background_Image__c</fullName>
    <description>The background image for VAT Invoice</description>
    <inlineHelpText>The background image for VAT Invoice</inlineHelpText>
    <label>VAT Background Image</label>
    <type>Url</type>
</CustomField>