force-app/main/default/objects/Site_Custom_Settings__c/fields/VAT_Running_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Running_Number__c</fullName>
    <label>VAT Running Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>